# three-body

./: Cargo.toml  plot-motions.py
src/: main.rs
