[package]
name = "three-body-rs"
version = "0.1.0"
authors = ["Jeremy DeJournett <jcdejournett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = '0.3'
num-bigint = '0.3.0'
num-traits = "0.2.14"